// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterContent > applies correct icon classes 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    aria-checked="true"
    aria-label="All"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-layers h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
      />
      <path
        d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
      />
      <path
        d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
      />
    </svg>
    <span
      class=""
    >
      All
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Posts"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-sticky-note h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
      />
      <path
        d="M15 3v4a2 2 0 0 0 2 2h4"
      />
    </svg>
    <span
      class=""
    >
      Posts
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Articles"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-newspaper h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 18h-5"
      />
      <path
        d="M18 14h-8"
      />
      <path
        d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
      />
      <rect
        height="4"
        rx="1"
        width="8"
        x="10"
        y="6"
      />
    </svg>
    <span
      class=""
    >
      Articles
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Images"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-image h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="3"
      />
      <circle
        cx="9"
        cy="9"
        r="2"
      />
      <path
        d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
      />
    </svg>
    <span
      class=""
    >
      Images
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Videos"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-play h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <polygon
        points="10 8 16 12 10 16 10 8"
      />
    </svg>
    <span
      class=""
    >
      Videos
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Links"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-link h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
      />
      <path
        d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
      />
    </svg>
    <span
      class=""
    >
      Links
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Files"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-download h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15V3"
      />
      <path
        d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
      />
      <path
        d="m7 10 5 5 5-5"
      />
    </svg>
    <span
      class=""
    >
      Files
    </span>
  </p>
</div>
`;

exports[`FilterContent > applies correct styling classes 1`] = `
<p
  aria-checked="true"
  aria-label="All"
  class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
  role="radio"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-layers h-5 w-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
    />
    <path
      d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
    />
    <path
      d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
    />
  </svg>
  <span
    class=""
  >
    All
  </span>
</p>
`;

exports[`FilterContent > applies correct styling classes 2`] = `
<p
  aria-checked="false"
  aria-label="Posts"
  class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
  role="radio"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-sticky-note h-5 w-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
    />
    <path
      d="M15 3v4a2 2 0 0 0 2 2h4"
    />
  </svg>
  <span
    class=""
  >
    Posts
  </span>
</p>
`;

exports[`FilterContent > renders with correct icons 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <p
    aria-checked="true"
    aria-label="All"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
    data-selected="true"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-layers h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
      />
      <path
        d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
      />
      <path
        d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
      />
    </svg>
    <span
      class=""
    >
      All
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Posts"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-sticky-note h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
      />
      <path
        d="M15 3v4a2 2 0 0 0 2 2h4"
      />
    </svg>
    <span
      class=""
    >
      Posts
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Articles"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-newspaper h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 18h-5"
      />
      <path
        d="M18 14h-8"
      />
      <path
        d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
      />
      <rect
        height="4"
        rx="1"
        width="8"
        x="10"
        y="6"
      />
    </svg>
    <span
      class=""
    >
      Articles
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Images"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-image h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <rect
        height="18"
        rx="2"
        ry="2"
        width="18"
        x="3"
        y="3"
      />
      <circle
        cx="9"
        cy="9"
        r="2"
      />
      <path
        d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
      />
    </svg>
    <span
      class=""
    >
      Images
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Videos"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-play h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <polygon
        points="10 8 16 12 10 16 10 8"
      />
    </svg>
    <span
      class=""
    >
      Videos
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Links"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-link h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
      />
      <path
        d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
      />
    </svg>
    <span
      class=""
    >
      Links
    </span>
  </p>
  <p
    aria-checked="false"
    aria-label="Files"
    class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
    data-selected="false"
    data-slot="filter-item"
    data-testid="filter-item"
    role="radio"
    tabindex="-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-download h-5 w-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15V3"
      />
      <path
        d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
      />
      <path
        d="m7 10 5 5 5-5"
      />
    </svg>
    <span
      class=""
    >
      Files
    </span>
  </p>
</div>
`;

exports[`FilterContent > rerenders with different selected tabs 1`] = `
<p
  aria-checked="true"
  aria-label="All"
  class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
  role="radio"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-layers h-5 w-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
    />
    <path
      d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
    />
    <path
      d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
    />
  </svg>
  <span
    class=""
  >
    All
  </span>
</p>
`;

exports[`FilterContent > rerenders with different selected tabs 2`] = `
<p
  aria-checked="false"
  aria-label="Posts"
  class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
  role="radio"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-sticky-note h-5 w-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
    />
    <path
      d="M15 3v4a2 2 0 0 0 2 2h4"
    />
  </svg>
  <span
    class=""
  >
    Posts
  </span>
</p>
`;

exports[`FilterContent > rerenders with different selected tabs 3`] = `
<p
  aria-checked="false"
  aria-label="All"
  class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
  role="radio"
  tabindex="-1"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-layers h-5 w-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
    />
    <path
      d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
    />
    <path
      d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
    />
  </svg>
  <span
    class=""
  >
    All
  </span>
</p>
`;

exports[`FilterContent > rerenders with different selected tabs 4`] = `
<p
  aria-checked="true"
  aria-label="Videos"
  class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
  role="radio"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-play h-5 w-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <polygon
      points="10 8 16 12 10 16 10 8"
    />
  </svg>
  <span
    class=""
  >
    Videos
  </span>
</p>
`;

exports[`FilterContent - Snapshots > matches snapshot with All content selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="«ra»"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Content
    </h2>
  </div>
  <div
    aria-labelledby="«ra»"
    class=""
    data-testid="filter-content-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <p
        aria-checked="true"
        aria-label="All"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Posts"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
          />
          <path
            d="M15 3v4a2 2 0 0 0 2 2h4"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Articles"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
        <span
          class=""
        >
          Articles
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Images"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
        </svg>
        <span
          class=""
        >
          Images
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Videos"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-play h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polygon
            points="10 8 16 12 10 16 10 8"
          />
        </svg>
        <span
          class=""
        >
          Videos
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Links"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class=""
        >
          Links
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Files"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        <span
          class=""
        >
          Files
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`FilterContent - Snapshots > matches snapshot with Articles content selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="«rc»"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Content
    </h2>
  </div>
  <div
    aria-labelledby="«rc»"
    class=""
    data-testid="filter-content-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <p
        aria-checked="false"
        aria-label="All"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Posts"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
          />
          <path
            d="M15 3v4a2 2 0 0 0 2 2h4"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </p>
      <p
        aria-checked="true"
        aria-label="Articles"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
        <span
          class=""
        >
          Articles
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Images"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
        </svg>
        <span
          class=""
        >
          Images
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Videos"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-play h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polygon
            points="10 8 16 12 10 16 10 8"
          />
        </svg>
        <span
          class=""
        >
          Videos
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Links"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class=""
        >
          Links
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Files"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        <span
          class=""
        >
          Files
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`FilterContent - Snapshots > matches snapshot with Files content selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="«rg»"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Content
    </h2>
  </div>
  <div
    aria-labelledby="«rg»"
    class=""
    data-testid="filter-content-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <p
        aria-checked="false"
        aria-label="All"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Posts"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
          />
          <path
            d="M15 3v4a2 2 0 0 0 2 2h4"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Articles"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
        <span
          class=""
        >
          Articles
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Images"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
        </svg>
        <span
          class=""
        >
          Images
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Videos"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-play h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polygon
            points="10 8 16 12 10 16 10 8"
          />
        </svg>
        <span
          class=""
        >
          Videos
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Links"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class=""
        >
          Links
        </span>
      </p>
      <p
        aria-checked="true"
        aria-label="Files"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        <span
          class=""
        >
          Files
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`FilterContent - Snapshots > matches snapshot with Images content selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="«rd»"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Content
    </h2>
  </div>
  <div
    aria-labelledby="«rd»"
    class=""
    data-testid="filter-content-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <p
        aria-checked="false"
        aria-label="All"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Posts"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
          />
          <path
            d="M15 3v4a2 2 0 0 0 2 2h4"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Articles"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
        <span
          class=""
        >
          Articles
        </span>
      </p>
      <p
        aria-checked="true"
        aria-label="Images"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
        </svg>
        <span
          class=""
        >
          Images
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Videos"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-play h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polygon
            points="10 8 16 12 10 16 10 8"
          />
        </svg>
        <span
          class=""
        >
          Videos
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Links"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class=""
        >
          Links
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Files"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        <span
          class=""
        >
          Files
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`FilterContent - Snapshots > matches snapshot with Links content selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="«rf»"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Content
    </h2>
  </div>
  <div
    aria-labelledby="«rf»"
    class=""
    data-testid="filter-content-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <p
        aria-checked="false"
        aria-label="All"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Posts"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
          />
          <path
            d="M15 3v4a2 2 0 0 0 2 2h4"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Articles"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
        <span
          class=""
        >
          Articles
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Images"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
        </svg>
        <span
          class=""
        >
          Images
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Videos"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-play h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polygon
            points="10 8 16 12 10 16 10 8"
          />
        </svg>
        <span
          class=""
        >
          Videos
        </span>
      </p>
      <p
        aria-checked="true"
        aria-label="Links"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class=""
        >
          Links
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Files"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        <span
          class=""
        >
          Files
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`FilterContent - Snapshots > matches snapshot with Posts content selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="«rb»"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Content
    </h2>
  </div>
  <div
    aria-labelledby="«rb»"
    class=""
    data-testid="filter-content-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <p
        aria-checked="false"
        aria-label="All"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </p>
      <p
        aria-checked="true"
        aria-label="Posts"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
          />
          <path
            d="M15 3v4a2 2 0 0 0 2 2h4"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Articles"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
        <span
          class=""
        >
          Articles
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Images"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
        </svg>
        <span
          class=""
        >
          Images
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Videos"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-play h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polygon
            points="10 8 16 12 10 16 10 8"
          />
        </svg>
        <span
          class=""
        >
          Videos
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Links"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class=""
        >
          Links
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Files"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        <span
          class=""
        >
          Files
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`FilterContent - Snapshots > matches snapshot with Videos content selected tab 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="«re»"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Content
    </h2>
  </div>
  <div
    aria-labelledby="«re»"
    class=""
    data-testid="filter-content-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <p
        aria-checked="false"
        aria-label="All"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Posts"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
          />
          <path
            d="M15 3v4a2 2 0 0 0 2 2h4"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Articles"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
        <span
          class=""
        >
          Articles
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Images"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
        </svg>
        <span
          class=""
        >
          Images
        </span>
      </p>
      <p
        aria-checked="true"
        aria-label="Videos"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-play h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polygon
            points="10 8 16 12 10 16 10 8"
          />
        </svg>
        <span
          class=""
        >
          Videos
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Links"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class=""
        >
          Links
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Files"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        <span
          class=""
        >
          Files
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`FilterContent - Snapshots > matches snapshot with default props 1`] = `
<div
  class="mx-auto w-full flex flex-col gap-2 bg-background"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div
    class="flex flex-col gap-2"
    data-slot="filter-header"
    data-testid="filter-header"
    id="«r9»"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Content
    </h2>
  </div>
  <div
    aria-labelledby="«r9»"
    class=""
    data-testid="filter-content-radiogroup"
    role="radiogroup"
  >
    <div
      class="mx-auto w-full flex flex-col gap-2"
      data-slot="filter-list"
      data-testid="filter-list"
    >
      <p
        aria-checked="true"
        aria-label="All"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-foreground"
        data-selected="true"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
        <span
          class=""
        >
          All
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Posts"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8Z"
          />
          <path
            d="M15 3v4a2 2 0 0 0 2 2h4"
          />
        </svg>
        <span
          class=""
        >
          Posts
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Articles"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-newspaper h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 18h-5"
          />
          <path
            d="M18 14h-8"
          />
          <path
            d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
          />
          <rect
            height="4"
            rx="1"
            width="8"
            x="10"
            y="6"
          />
        </svg>
        <span
          class=""
        >
          Articles
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Images"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="3"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
        </svg>
        <span
          class=""
        >
          Images
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Videos"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-play h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polygon
            points="10 8 16 12 10 16 10 8"
          />
        </svg>
        <span
          class=""
        >
          Videos
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Links"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-link h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
          />
          <path
            d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
          />
        </svg>
        <span
          class=""
        >
          Links
        </span>
      </p>
      <p
        aria-checked="false"
        aria-label="Files"
        class="flex cursor-pointer items-center gap-2 text-base font-medium transition-colors text-muted-foreground hover:text-foreground/80"
        data-selected="false"
        data-slot="filter-item"
        data-testid="filter-item"
        role="radio"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-download h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 15V3"
          />
          <path
            d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
          />
          <path
            d="m7 10 5 5 5-5"
          />
        </svg>
        <span
          class=""
        >
          Files
        </span>
      </p>
    </div>
  </div>
</div>
`;
